--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ section {
     flex-direction: row;
     padding: 50px;
     width: 100%;
-    height: 70%;
+    height: 80%;
     position: relative;
     background-color: #FFBC42;
 }
@@ -50,10 +50,30 @@ section {
     color: white;
 }
 
+.result{
+    background-color: #FFFFFF;
+    border-radius: 5px;
+    margin-top: 20px;
+    padding-left: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-size: 25px;
+}
+
 #userInput::placeholder {
     color: white;
     opacity: 75%;
     font-size: 32px;
+}
+.title{
+    color: #FFFFFF;
+    font-size: 48px;
+    font-weight: 500;
+    margin-top: 20px;
+}
+.resultsTitle{
+    color: #FFFFFF;
+    font-size: 40px;
 }
 
 button {
