--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,16 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     ;
     font-weight: 100;
+    background-color: #FFBC42;
 }
 
 h1 {
+    background-color: white;
     z-index: 1;
-    margin-left: 50px;
-    margin-bottom: -35px;
+    padding-top: 150px;
+    padding-bottom: 250px;
+    padding-left: 90px;
+    margin-left: 0px;
     height: 25%;
     left: 59px;
     font-style: normal;
@@ -20,23 +24,24 @@ h1 {
     font-size: 72px;
     color: #333333;
 }
-.pieChart{
-    width:400px;
-    height:400px;
+
+.pieChart {
+    right: 200px;
+    width: 400px;
+    height: 400px;
 }
+
 section {
     background-position: 85% 0px;
     display: flex;
     flex-direction: row;
-    padding: 50px;
+    padding-left: 80px;
+    padding-top: 50px;
     width: 100%;
-    height: 80%;
+    height: 100%;
+    margin-top: -150px;
     position: relative;
     background-color: #FFBC42;
-}
-
-.LeftSide {
-    margin-right: 50px;
 }
 
 #userInput {
@@ -46,40 +51,44 @@ section {
     width: 503px;
     height: 69px;
     background-color: #FFBC42;
-    border: 5px solid #FFFFFF;
+    border: 3px solid #FFFFFF;
     box-sizing: border-box;
     border-radius: 5px;
     font-size: 48px;
     color: white;
 }
 
-.result{
-    background-color: #FFFFFF;
+.result {
+    color: white;
+    font-weight: 00;
     border-radius: 5px;
-    margin-top: 20px;
-    padding-left: 20px;
-    padding-top: 10px;
     padding-bottom: 10px;
-    font-size: 25px;
+    font-size: 32px;
 }
 
 #userInput::placeholder {
     color: white;
     opacity: 75%;
-    font-size: 32px;
+    font-size: 42px;
 }
-.title{
+
+.title {
     color: #FFFFFF;
     font-size: 48px;
     font-weight: 500;
     margin-top: 20px;
 }
-.resultsTitle{
+
+.resultsTitle {
     color: #FFFFFF;
-    font-size: 40px;
+    font-size: 72px;
+    margin-top: 50px;
+    font-weight: 200;
 }
 
 button {
+    position: relative;
+    margin-left: -300px;
     z-index: 1;
     justify-self: end;
     border-style: none;
@@ -100,6 +109,7 @@ button:hover {
 
 .dropbtn {
     z-index: 1;
+    position: relative;
     height: 69px;
     border-radius: 5px;
     width: 503px;
@@ -113,7 +123,7 @@ button:hover {
 .dropdown-content {
     z-index: 1;
     width: 495px;
-    margin-left: 3px;
+    margin-left: -295px;
     display: none;
     position: absolute;
     background-color: #f9f9f9;
@@ -171,4 +181,25 @@ button:hover {
     background-size: 200px;
     background-image: url("IntersectUpRightWhiteFlipped.svg");
     background-repeat: no-repeat;
+}
+
+.pieChart {
+    padding: 0px;
+    margin-top: 0px;
+    margin-left: 250px;
+    height: 450px;
+    width: 450px;
+}
+
+#results {
+    color: white;
+    font-weight: 300;
+    font-size: 48px;
+    width: 1700px;
+    letter-spacing: 15px;
+    line-height: 200px;
+}
+
+.dropdown {
+    left: 300px;
 }
