--- a/styles.css
+++ b/styles.css
@@ -21,14 +21,13 @@ h1 {
     margin-left: 0px;
     font-style: normal;
     font-weight: 100;
-    font-size: 72px;
+    font-size: 64px;
     color: #333333;
 }
 
 .pieChart {
-    margin-right: 150px;
-    width: 400px;
-    height: 400px;
+    width: 600px;
+    height: 600px;
 }
 
 section {
@@ -90,7 +89,7 @@ button {
     border-radius: 15px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 200;
-    font-size: 48px;
+    font-size: 36px;
     line-height: 56px;
     color: #FFBC42;
 }
@@ -143,7 +142,7 @@ button:hover {
 }
 
 .submitButton {
-    margin-left: 50px;
+    margin-left: 25px;
     width: 500px;
 }
 
@@ -190,8 +189,9 @@ button:hover {
 }
 
 .TheRow {
-    width: 50%;
+    width: 100%;
     display: flex;
+    padding-right: 100px;
     flex-direction: row;
     justify-content: space-between;
 }
@@ -216,7 +216,7 @@ button:hover {
     flex-direction: row;
     justify-content: flex-start;
     padding-right: 100px;
-    width: 60%;
+    width: 70%;
 }
 
 .output {
